add fds
