# backend/lib/webserver/RobotRouter.js
@@ -1,5 +1,5 @@
 const express = require("express");
-
+const Logger = require("../Logger");
 
 const ValetudoRobot = require("../core/ValetudoRobot");
 
@@ -75,11 +75,15 @@ class RobotRouter {
                 {
                     
                     const objectName =  req.query.obj_name;
-                    const fdsObject = this.robot.fdsObjects.find(name => name === objectName);
+                    const index = req.query.index;
+                    const fdsObject = this.robot.fdsObjects.find(obj => obj.name === objectName && obj.index === index);
 
                     if (fdsObject === undefined)
                     {
-                        res.status(404).send("Object not found");
+                        Logger.info("Current fds objects");
+                        this.robot.fdsObjects.forEach((obj) => Logger.info(`Object ${obj.name}/${obj.index}`));
+
+                        res.status(404).send(`Object ${objectName}/${index} not found`);
                         return;
                     }
 
